--- a/Farmas/app/src/main/res/layout/activity_main.xml
+++ b/Farmas/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/button"
