--- a/Farmas/app/src/main/res/menu/menu_dados_empresa.xml
+++ b/Farmas/app/src/main/res/menu/menu_dados_empresa.xml
@@ -4,4 +4,8 @@
         android:id="@+id/dados_empresa"
         android:icon="@android:drawable/ic_input_add"
         android:title="@string/menu_dados_empresa"></item>
+    <item
+        android:id="@+id/chamadas"
+        android:icon="@android:drawable/ic_input_add"
+        android:title="@string/menu_chamadas"></item>
 </menu>
